--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,14 +3,14 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main  # Run on push to main branch
+      - main  # Trigger on push to main branch
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    # Step 1: Checkout code
+    # Step 1: Checkout the repository
     - name: Checkout repository
       uses: actions/checkout@v3
 
@@ -24,9 +24,9 @@ jobs:
     # Step 3: Build Docker image
     - name: Build Docker image
       run: |
-        docker build -t myusername/myapp:latest .
+        docker build -t pawan202/text-summarization:latest .
 
     # Step 4: Push Docker image to Docker Hub
     - name: Push Docker image
       run: |
-        docker push myusername/myapp:latest
+        docker push pawan202/text-summarization:latest
