--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
-transformers
-transformers[sentencepiece]
-datasets
-sacrebleu 
-rouge_score 
-py7zr
-pandas
-nltk
-tqdm
-PyYAML
-matplotlib
-torch
-notebook
-boto3
-mypy-boto3-s3
+transformers>=4.50.0
+transformers[sentencepiece]>=4.50.0
+datasets>=2.12.0
+sacrebleu>=2.2.0
+rouge_score>=0.1.2
+py7zr>=0.20.4
+pandas>=1.5.3
+nltk>=3.8.1
+tqdm>=4.65.0
+PyYAML>=6.0
+matplotlib>=3.7.1
+torch>=2.0.1
+notebook>=6.5.3
+boto3>=1.28.13
+mypy-boto3-s3>=1.24.17
 python-box==6.0.2
 ensure==1.0.2
 fastapi==0.78.0
